--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Hi</title>
 </head>
 <body>
-    Personal website under development
+    Personal website under development...
 </body>
 </html>
