--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome</title>
+    <title>Contact</title>
 </head>
 <body>
-    Welcome to my website!
+    Naomi Wilson&reg;
 </body>
 </html>
