--- a/index.html
+++ b/index.html
@@ -1,11 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hi</title>
-</head>
-<body>
-    Personal website under development...
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>About Me</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
+    <link href="styles.css" rel="stylesheet" />
+  </head>
+  <body>
+    <button id="light-mode-btn" type="button" class="btn btn-light">
+      Light Mode
+    </button>
+    <button id="dark-mode-btn" type="button" class="btn btn-dark">
+      Dark Mode
+    </button>
+    <header>
+      <h1>About Me</h1>
+    </header>
+    <main>
+      <div>
+        <h2>Hello. My name is Naomi Wilson.</h2>
+        <p>
+          I am a senior at Babson College pursuing a Bachelor of Science with
+          concentrations in Business Analytics and Quantitative Methods.
+        </p>
+        <p>
+          This summer, I completed an internship at Travelers as part of the
+          Business Insights & Analytics Leadership Development Program (BI&A
+          LDP) and will be returning as a full-time BI&A LDP Participant in June
+          of 2024.
+        </p>
+        <p>
+          At Babson, I am on the e-board for two student organizations. As the
+          Co-President, I plan events and organizational growth for the Business
+          Analytics Association, an organization with the aim of providing
+          opportunities for students to gain analytical and technical skills
+          relevant to the business analytics field. As the VP of Finance, I
+          support budgeting and fundraising for Japan International Circle, an
+          organization with the aim of promoting Japanese cultural awareness at
+          Babson.
+        </p>
+        <p>
+          I also enjoy studying Mandarin Chinese and Japanese and am engaged in
+          various co-curricular activities as a Presidential and Women's
+          Leadership Scholar.
+        </p>
+      </div>
+      <div>
+        <h3>To learn more about my background and projects:</h3>
+        <ul class="italics">
+          <li>
+            Visit
+            <a href="http://127.0.0.1:5500/homepage/resume.html" target="_blank"
+              >my resume page</a
+            >
+          </li>
+          <li>
+            Visit
+            <a
+              href="https://www.linkedin.com/in/naomiwilson2024/"
+              target="_blank"
+              >my LinkedIn page</a
+            >
+          </li>
+          <li>
+            Visit
+            <a href="https://github.com/naomikwilson" target="_blank"
+              >my GitHub page</a
+            >
+          </li>
+        </ul>
+      </div>
+    </main>
+    <script src="light-dark-bg.js"></script>
+  </body>
 </html>
