Update website links

--- a/resume.html
+++ b/resume.html
@@ -27,7 +27,7 @@
     <header>
       <h1>Naomi Wilson</h1>
       <h3>
-        <a href="http://127.0.0.1:5500/homepage/index.html" target="_blank"
+        <a href="https://naomikwilson.github.io/index" target="_blank"
           >About me</a
         >
       </h3>
