--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <ul class="italics">
           <li>
             Visit
-            <a href="http://127.0.0.1:5500/homepage/resume.html" target="_blank"
+            <a href="https://naomikwilson.github.io/resume" target="_blank"
               >my resume page</a
             >
           </li>
